# ERoBS_ur3e

./: .gitignore  .gitmodules
external_dependencies/: ERoBS_dependencies.humble.repos
src/: azcamera.cpp  recording.cpp
ur3e_controllers/bluesky_interface_examples/: package.xml  setup.cfg  setup.py
ur3e_controllers/bluesky_interface_examples/bluesky_interface_examples/: pick_place_action_client.py  pickup_action_client.py  pickup_task_client.py
ur3e_controllers/cpp_arm_moveit/: CMakeLists.txt  package.xml
ur3e_controllers/cpp_arm_moveit/config/: params.yaml
ur3e_controllers/cpp_arm_moveit/launch/: arm_cartesian_launch.py  cpp_moveit_launch.py
ur3e_controllers/cpp_arm_moveit/src/: arm_grasps.cpp  arm_moveit.cpp  arm_moveit_cartesian.cpp  arm_moveit_cartesian_working05122023.cpp  motion_planning.cpp  waypoint_pub.cpp
ur3e_controllers/custom_msgs/: CMakeLists.txt  package.xml
ur3e_controllers/custom_msgs/action/: PickPlace.action
ur3e_controllers/custom_msgs/srv/: GripperCmd.srv  TaskCmd.srv
ur3e_controllers/robotiq_driver/: CMakeLists.txt  package.xml
ur3e_controllers/robotiq_driver/launch/: tests.launch.py
ur3e_controllers/robotiq_driver/src/: gripper_close.cpp  gripper_interface_service.cpp  gripper_interface_test.cpp  gripper_open.cpp  robotiq_gripper_interface.cpp  test_interface.cpp
ur3e_controllers/sample_movement_ur3e_sim/: CMakeLists.txt  package.xml
ur3e_controllers/sample_movement_ur3e_sim/include/sample_movement_ur3e_sim/: mtc_planner.hpp  simple_actions.hpp  task_action_server.hpp  task_server.hpp  ur_action_client.hpp  ur_action_server.hpp  ur_task_manager.hpp  ur_task_manager_screwed.hpp  visibility_control.h
ur3e_controllers/sample_movement_ur3e_sim/launch/: sample_movement_ur3e_sim.launch.py
ur3e_controllers/sample_movement_ur3e_sim/params/: env_objects.yaml  env_objects.yaml.save  env_objects.yaml.save.1
ur3e_controllers/sample_movement_ur3e_sim/src/: mtc_planner.cpp  mtc_planner_works_with_tf_bug.cpp  sample_movement_ur3e_sim.cpp  simple_actions.cpp  task_action_server.cpp  task_server.cpp  ur_action_client.cpp  ur_action_server.cpp  ur_task_manager.cpp  ur_task_manager_screwed.cpp  ur_task_manager_sim.cpp
ur3e_controllers/simple_tests/: CMakeLists.txt  package.xml
ur3e_controllers/simple_tests/launch/: simple_params.launch.py
ur3e_controllers/simple_tests/params/: env_objects.yaml
ur3e_controllers/simple_tests/src/: simple_params.cpp
ur_hande_moveit_config/: package.xml
ur_hande_moveit_config/config/: joint_limits.yaml
ur_hande_moveit_config/launch/: mtc_arm_gripper.launch.py  ur_control_hande.launch.py
